# CppPlay

./: .gitignore  CMakeLists.txt
cmake-tutorial/: CMakeLists.txt  main.cpp
cmake-tutorial/math/: operations.cpp  operations.h
course/00/: CMakeLists.txt  lib.cpp  main.cpp
course/00/Sources/Main/: Lib.cpp  Main.cpp
course/01/: CMakeLists.txt  run.sh
course/01/Sources/: Main.cpp
course/01/Sources/Comparator/: LexicographicComparator.cpp  LexicographicComparator.h  LexicographicComporator.cpp  LexicographicComporator.h
course/01/Sources/Filter/: AnyByteFilter.cpp  AnyByteFilter.h  Filter.cpp  Filter.h  FirstAndSecondByteFilter.cpp  FirstAndSecondByteFilter.h  FirstByteFilter.cpp  FirstByteFilter.h  SortedFilter.cpp  SortedFilter.h
course/01/Sources/Formatter/: Formatter.h
course/01/Sources/Main/: Applier.cpp  Applier.h  Filter.cpp  Filter.h  Formatter.cpp  Formatter.h  IpCommon.h  IpFilter.cpp  IpFilter.h  Lib.h  Main.cpp  Reader.cpp  Reader.h  Runner.cpp  Runner.h  Validator.cpp  Version.h
course/01/Sources/Main/Filter/: SortedFilter.h
course/01/Sources/Main/filter/: Filter.cpp  Filter.h  FirstAndSecondByteFilter.cpp  SortedFilter.cpp  SortedFilter.h
course/01/Sources/Reader/: FileReader.cpp  FileReader.h  IReader.h  Reader.h  StdReader.cpp  StdReader.h
course/01/Sources/Runner/: Runner.cpp  Runner.h
course/01/Sources/Validator/: Validator.h
course/01/Tests/: ip_filter_test.cpp  test_version.cpp
course/02/: CMakeLists.txt  build.sh  install.sh
course/02/Ops/: version.h.in
course/02/Sources/: Allocator.cpp  Allocator.h  Calculator.cpp  Calculator.h  FaFi.h  Main.cpp
course/02/Tests/: allocator_test.cpp
course/03/: .gitignore  CMakeLists.txt  README  docker-compose.yml
course/03/Source/: User.cpp  User.h
course/03/resource/: config.json
course/03/resource/db/: user.sql
course/03/src/: Main.cpp  Static.cpp  Static.h  User1.cpp  User1.h
course/03/src/entity/: User.cpp  User.h
course/03/src/property/: ConfigReader.cpp  ConfigReader.h  Property.cpp  Property.h  PropertyHolder.cpp  PropertyHolder.h
course/03/src/repository/: SessionFactory.cpp  SessionFactory.h  UserRepository.cpp  UserRepository.h
dev/: Dockerfile  docker-compose.yml
dev/base/: Dockerfile
dev/with_db/: Dockerfile
output/: main
source/basics/: 02_type.cpp  03_const.cpp  06_struct.cpp  08_namespace.cpp  11_returning.cpp
src/01_basics/: 01_hello.cpp  04_pointers.cpp  07_class.cpp  09_exceptions.cpp  10_asserts.cpp  12_binding.cpp
src/cloud/: Client.cpp  Client.h  Server.h
src/common/: common.h
standalone/: CMakeLists.txt
standalone/src/algo/1/: Calculator.cpp  ExpressionCalculator.cpp  ExpressionCalculator.h  ExpressionHolder.cpp  ExpressionHolder.h  Operator.cpp  Operator.h  Operators.cpp  Operators.h  Planet.cpp  Planet.h
standalone/src/algo/hr/: 02_exer.cpp
standalone/src/basics/: 01_hello.cpp  02_type.cpp  03_const.cpp  04_1_references.cpp  04_pointers.cpp  05_switch.cpp  06_struct.cpp  07_class.cpp  08_namespace.cpp  09_exceptions.cpp  10_asserts.cpp  11_returning.cpp  12_binding.cpp  13_container.cpp  14_casting.cpp  15_inheritance.cpp  16_cstring.cpp  17_array_allocation.cpp  18_smart_pointers.cpp  19_strings.cpp  20_vacabluary.cpp  21_templates.cpp  22_lambdas.cpp  23_decltype.cpp  24_var_array.cpp  25_rvalue_reference.cpp  26_move.cpp  28_deduction.cpp  29_binding.cpp  30_constexp_if.cpp  31_filesystem.cpp  32_folding.cpp  33_inline.cpp  34_enable_shared_from_this.cpp  35_empty_base_optimization.cpp  36_hexadecimal.cpp  37_virtual.cpp
standalone/src/chapters/chapter_02/: Ex2_05.cpp  Exer2_8.cpp
standalone/src/chapters/chapter_03/: Ex3_03.cpp
standalone/src/exers/: SharedPtr.cpp
standalone/src/language/: 01_namespace.cpp  02_literals.cpp  03_enums.cpp  04_conditional.cpp  05_spaceship_comparison.cpp  06_attributes.cpp  07_c_arrays.cpp  08_arrays.cpp  09_vectors.cpp  10_pairs.cpp  11_optional.cpp  12_initializer_list.cpp  13_raw_pointers.cpp  14_const.cpp  15_constexpr.cpp  16_references.cpp  17_type_alias.cpp
standalone/src/patterns/common/: enum.h
standalone/src/patterns/creational/builder/: Builders.cpp  Person.cpp  Person.h  SimpleBuilder.cpp
standalone/src/patterns/creational/builder/telescoping/: Person.cpp  Person.h  PersonBuilder.cpp  PersonBuilder.h
standalone/src/patterns/creational/factory_method/: AbstractPizza.cpp  AbstractPizza.h  FactoryMethodTest.h  ItalianPizza.cpp  ItalianPizza.h  NyPizza.cpp  Pizza.h  PizzaFactory.cpp  PizzaFactory.h
