cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#set(CXXFLAGS ${CXXFLAGS} -std=c++2a)
add_compile_options(-std=c++2a)
message("Version ${CMAKE_CXX_COMPILER_VERSION}")

add_executable(GreeterStandalone ${sources} src/algo/1/Calculator.cpp src/algo/1/Operator.cpp)

add_executable(main1 src/basics/01_hello.cpp src/basics/20_vacabluary.cpp)
add_executable(main2 src/basics/02_type.cpp)
#add_executable(main3 src/basics/03_const.cpp)
add_executable(main4_1 src/basics/04_1_references.cpp)
add_executable(main4 src/basics/04_pointers.cpp)
add_executable(main5 src/basics/05_switch.cpp)
add_executable(main6 src/basics/06_struct.cpp)
add_executable(main7 src/basics/07_class.cpp)
add_executable(main8 src/basics/08_namespace.cpp)
add_executable(main9 src/basics/09_exceptions.cpp)
add_executable(main10 src/basics/10_asserts.cpp)
add_executable(main11 src/basics/11_returning.cpp)
add_executable(main12 src/basics/12_binding.cpp)
add_executable(main13 src/basics/13_container.cpp)
add_executable(main14 src/basics/14_casting.cpp)
add_executable(main15 src/basics/15_inheritance.cpp)
add_executable(main16 src/basics/16_cstring.cpp)
add_executable(main17 src/basics/17_array_allocation.cpp)
add_executable(main18 src/basics/18_smart_pointers.cpp)
add_executable(main19 src/basics/19_strings.cpp)

add_executable(chapters_2_1 src/chapters/chapter_02/Ex2_05.cpp)
add_executable(chapters_2_2 src/chapters/chapter_02/Exer2_8.cpp)
add_executable(chapters_3_1 src/chapters/chapter_03/Ex3_03.cpp)
